JnT getprice to track order done