@@ -16,6 +16,13 @@ import com.kalsym.deliveryservice.utils.HttpResult;
 import com.kalsym.deliveryservice.utils.HttpsPostConn;
 import com.kalsym.deliveryservice.utils.LogUtil;
 import com.squareup.okhttp.*;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
+import org.springframework.web.client.RestTemplate;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpEntity;
 
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
@@ -29,6 +36,7 @@ import java.security.NoSuchAlgorithmException;
 import java.util.Base64;
 import java.util.HashMap;
 import java.util.concurrent.CountDownLatch;
+import javax.xml.bind.DatatypeConverter;
 
 public class SubmitOrder extends SyncDispatcher {
 
@@ -74,66 +82,84 @@ public class SubmitOrder extends SyncDispatcher {
 
         LogUtil.info(logprefix, location, "Process start", "");
         ProcessResult response = new ProcessResult();
-        HashMap httpHeader = new HashMap();
+//        HashMap httpHeader = new HashMap();
 //        httpHeader.put("User-Token", this.submitOrder_token);
 //        httpHeader.put("Subscription-Key", this.submitorder_key);
-        httpHeader.put("Content-Type", "application/json-patch+json");
-        httpHeader.put("Connection", "close");
+//        httpHeader.put("Content-Type", "application/json-patch+json");
+//        httpHeader.put("Connection", "close");
         String requestBody = generateRequestBody();
-
+        LogUtil.info(logprefix, location, "JnT request body for Submit Order: " + requestBody, "");
         String data_digest = requestBody + "AKe62df84bJ3d8e4b1hea2R45j11klsb";
         String encode_key = "";
         try {
             MessageDigest md = MessageDigest.getInstance("MD5");
             md.update(data_digest.getBytes());
             byte[] digest = md.digest();
-            String digestString = digest.toString();
-            byte[] card = digestString.getBytes(StandardCharsets.UTF_8);
-            String cardString = new String(card, StandardCharsets.UTF_8);
-            String base64Key = Base64.getEncoder().encodeToString(cardString.getBytes());
+            String myHash = DatatypeConverter.printHexBinary(digest).toLowerCase();
+            String base64Key = Base64.getEncoder().encodeToString(myHash.getBytes());
             encode_key = base64Key;
         } catch (NoSuchAlgorithmException e) {
             throw new IllegalArgumentException(e);
         }
+        MultiValueMap<String, Object> postParameters = new LinkedMultiValueMap<>();
+        postParameters.add("data_param", requestBody);
+        postParameters.add("data_sign", encode_key);
+        HttpHeaders headers = new HttpHeaders();
+        headers.add("Content-Type", "application/x-www-form-urlencoded");
+        HttpEntity<MultiValueMap<String, Object>> request = new HttpEntity<>(postParameters, headers);
+        RestTemplate restTemplate = new RestTemplate();
+        ResponseEntity<String> responses = restTemplate.exchange(submitOrder_url, HttpMethod.POST, request, String.class);
 
-        String urlParameters  = "data_param=" + requestBody + "&data_sign="+ encode_key;
-        byte[] postData = urlParameters.getBytes( StandardCharsets.UTF_8 );
-        int postDataLength = postData.length;
-        String request = "http://47.57.89.30/blibli/order/createOrder";
-        InputStream stream = null;
-        try {
-            URL url = new URL(request);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setDoOutput(true);
-            conn.setInstanceFollowRedirects(false);
-            conn.setRequestMethod("POST");
-            conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-            conn.setRequestProperty("charset", "utf-8");
-            conn.setRequestProperty("Content-Length", Integer.toString(postDataLength));
-            conn.setUseCaches(false);
-            DataOutputStream wr = new DataOutputStream(conn.getOutputStream());
-            wr.write(postData);
-            wr.flush();
-            stream = conn.getInputStream();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(stream, "UTF-8"), 8);
-            String result = reader.readLine();
-            conn.getResponseCode();
-            LogUtil.info(logprefix, location, "Jnt Result: " + result, "");
-//            return result;
-        } catch (Exception ex) {
-            LogUtil.error(logprefix, location, "Error extracting result", "", ex);
-        }
-        // how to send the request using x-www-form-urlencoded
-        HttpResult httpResult = HttpsPostConn.SendHttpsRequest("POST", this.systemTransactionId, this.submitOrder_url, httpHeader, requestBody, this.connectTimeout, this.waitTimeout);
-        if (httpResult.resultCode==0) {
-            LogUtil.info(logprefix, location, "Request successful", "");
-            response.resultCode=0;
-            response.returnObject=httpResult.responseString; // need to implement extractResponseBody here
+        int statusCode = responses.getStatusCode().value();
+        LogUtil.info(logprefix, location, "Responses", responses.getBody());
+        if (statusCode == 200) {
+            response.resultCode = 0;
+            LogUtil.info(logprefix, location, "JnT Response for Submit Order: " + responses.getBody(), "");
+            response.returnObject = extractResponseBody(responses.getBody());
         } else {
             LogUtil.info(logprefix, location, "Request failed", "");
-            response.resultCode=-1;
+            response.resultCode = -1;
         }
         LogUtil.info(logprefix, location, "Process finish", "");
+
+//        String urlParameters  = "data_param=" + requestBody + "&data_sign="+ encode_key;
+//        byte[] postData = urlParameters.getBytes( StandardCharsets.UTF_8 );
+//        int postDataLength = postData.length;
+//        String request = "http://47.57.89.30/blibli/order/createOrder";
+//        InputStream stream = null;
+//        try {
+//            URL url = new URL(request);
+//            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+//            conn.setDoOutput(true);
+//            conn.setInstanceFollowRedirects(false);
+//            conn.setRequestMethod("POST");
+//            conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+//            conn.setRequestProperty("charset", "utf-8");
+//            conn.setRequestProperty("Content-Length", Integer.toString(postDataLength));
+//            conn.setUseCaches(false);
+//            DataOutputStream wr = new DataOutputStream(conn.getOutputStream());
+//            wr.write(postData);
+//            wr.flush();
+//            stream = conn.getInputStream();
+//            BufferedReader reader = new BufferedReader(new InputStreamReader(stream, "UTF-8"), 8);
+//            String result = reader.readLine();
+//            conn.getResponseCode();
+//            LogUtil.info(logprefix, location, "Jnt Result: " + result, "");
+////            return result;
+//        } catch (Exception ex) {
+//            LogUtil.error(logprefix, location, "Error extracting result", "", ex);
+//        }
+        // how to send the request using x-www-form-urlencoded
+//        HttpResult httpResult = HttpsPostConn.SendHttpsRequest("POST", this.systemTransactionId, this.submitOrder_url, httpHeader, requestBody, this.connectTimeout, this.waitTimeout);
+//        if (httpResult.resultCode==0) {
+//            LogUtil.info(logprefix, location, "Request successful", "");
+//            response.resultCode=0;
+//            response.returnObject=httpResult.responseString; // need to implement extractResponseBody here
+//        } else {
+//            LogUtil.info(logprefix, location, "Request failed", "");
+//            response.resultCode=-1;
+//        }
+//        LogUtil.info(logprefix, location, "Process finish", "");*/
         return response;
     }
 
@@ -144,7 +170,7 @@ public class SubmitOrder extends SyncDispatcher {
         details.addProperty("username", "TEST");
         details.addProperty("api_key", "TES123");
         details.addProperty("cuscode", "ITTEST0001");
-        details.addProperty("orderid", order.getTransactionId());
+        details.addProperty("orderid", order.getOrderId());
         details.addProperty("shipper_contact", order.getPickup().getPickupContactName());
         details.addProperty("shipper_name", order.getPickup().getPickupContactName());
         details.addProperty("shipper_phone", order.getPickup().getPickupContactPhone());
@@ -154,12 +180,16 @@ public class SubmitOrder extends SyncDispatcher {
         details.addProperty("receiver_addr", order.getDelivery().getDeliveryAddress());
         details.addProperty("receiver_phone", order.getDelivery().getDeliveryContactPhone());
         details.addProperty("receiver_zip", order.getDelivery().getDeliveryPostcode());
-        details.addProperty("qty", order.getPieces());
-        details.addProperty("weight", order.getTotalWeightKg());
+        if (order.getPieces() == 0) {
+            details.addProperty("qty", "1");
+        } else {
+            details.addProperty("qty", order.getPieces().toString());
+        }
+        details.addProperty("weight", order.getTotalWeightKg().toString());
         details.addProperty("item_name", "");
         details.addProperty("goodsdesc", order.getShipmentContent());
         details.addProperty("goodsvalue", order.getShipmentValue());
-        details.addProperty("payType", "");
+        details.addProperty("payType", "PP_PM");
         details.addProperty("expressType", "");
         details.addProperty("goodType", order.getItemType().name());
         details.addProperty("serviceType", "1");
@@ -178,17 +208,19 @@ public class SubmitOrder extends SyncDispatcher {
             JsonObject jsonResp = new Gson().fromJson(respString, JsonObject.class);
             LogUtil.info(logprefix, location, "the json resp for submitOrder " + jsonResp, "");
             JsonArray dataArray = jsonResp.get("details").getAsJsonArray();
+
             JsonObject detailsData = dataArray.get(0).getAsJsonObject();
+            String awbNo1 = detailsData.get("awb_no").getAsString();
+            LogUtil.info(logprefix, location, "the awb number for submitOrder " + awbNo1, "");
             String status = detailsData.get("status").getAsString();
-            if (status == "success") {
+            LogUtil.info(logprefix, location, "the status for submitOrder " + status, "");
+            if (status.equalsIgnoreCase("success")) {
+                LogUtil.info(logprefix, location, "inside submitOrder if" , "");
                 // getting spOrderId
                 String awbNo = detailsData.get("awb_no").getAsString();
+                LogUtil.info(logprefix, location, "the awb number for submitOrder " + awbNo, "");
                 JsonObject data = detailsData.get("data").getAsJsonObject();
-                // how are we gonna set the price in delivery quotation
-                String price = data.get("price").getAsString();
-                String code = data.get("code").getAsString();
                 DeliveryOrder orderCreated = new DeliveryOrder();
-                DeliveryQuotation deliveryQuotation = new DeliveryQuotation();
                 orderCreated.setSpOrderId(awbNo);
 
                 orderCreated.setCreatedDate(DateTimeUtil.currentTimestamp());
